# doppel

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
adapters/rust/: Cargo.toml
adapters/rust/examples/: statlib.rs
adapters/rust/src/: lib.rs
docs/: contract-spec.md
docs/adr/: README.md  adr-001-recorder.md  adr-002-ordering-causality.md  adr-003-canonical-format.md  adr-004-value-capture.md  adr-005-nondeterminism.md  adr-006-rust-harness.md  adr-007-storage-ci-gate.md  adr-008-input-generation.md  implementation-notes.md
examples/statlib/: README.md  corpus.js  doppel.config.json  mutation-run.js  record.js  run-demo.js  workload.js
examples/statlib/contracts/: statlib.dopl.jsonl
examples/statlib/port/: adapter.js  mutant-adapter.js  mutants.js  statlib.js
examples/statlib/reference/: statlib.js  statlib.ts
src/: cli.ts  index.ts
src/capture/: redact.ts  snapshot.ts
src/contract/: cbor.ts  hash.ts  io.ts  jcs.ts  types.ts
src/diff/: differ.ts  graphdiff.ts  issues.ts  report.ts
src/record/: register.ts  session.ts  wrap.ts
src/replay/: adapter.ts  protocol.ts  serve.ts
test/: cbor.test.ts  contract-io.test.ts  e2e-statlib.test.ts  graphdiff.test.ts  jcs.test.ts  mutation.test.ts  record.test.ts  register.test.ts  snapshot.test.ts
test/fixtures/: mathy.mjs  reference-adapter.js  register-driver.mjs
