[package]
name = "doppel-adapter"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Reference Rust adapter for the doppel port-verification protocol (NDJSON over stdio)."
repository = "https://github.com/VaishGajaraj/doppel"

[dependencies]
# float_roundtrip is required: serde_json's default float parsing is fast but
# not correctly rounded, and doppel's own CI caught it turning a recorded
# value into its 1-ULP neighbor.
serde_json = { version = "1", features = ["float_roundtrip"] }

[[example]]
name = "statlib"
